--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @import "flowbite/src/themes/default";
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
+body {
+  background-image: url(./bgmovie.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
